--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,50 @@
-# ----------------
 # Python
-# ----------------
 __pycache__/
-*.pyc
+*.py[cod]
 *.pyo
 *.pyd
-*.pkl
-*.pdb
-*.egg-info/
-*.log
+*.so
 
-# ----------------
-# Virtual environments
-# ----------------
+# Virtual environment
 venv/
-.env/
+env/
 .venv/
 
-# ----------------
+# Jupyter
+.ipynb_checkpoints/
+*.ipynb~
+
 # IDE / Editor
-# ----------------
 .vscode/
 .idea/
 *.swp
+*.swo
+
+# OS files
 .DS_Store
-
-# ----------------
-# Machine Learning / Checkpoints
-# ----------------
-*.h5
-*.hdf5
-*.ckpt
-*.pt
-*.pth
-*.onnx
-*.tflite
-
-# ----------------
-# Data / Outputs
-# ----------------
-db/
-dataset/
-outputs/
-results/
-logs/
-
-# ----------------
-# Jupyter
-# ----------------
-.ipynb_checkpoints/
-*.ipynb
-
-# ----------------
-# OS
-# ----------------
 Thumbs.db
-desktop.ini
+
+# Logs
+*.log
+logs/
+*.out
+*.err
+
+# Data
+dataset/
+data/
+images/
+
+# Embeddings / Hypervectors
+embeddings/
+hypervectors/
+*.npy
+*.npz
+*.json
+
+# Databases
+db/*.jsonl
+!db/.gitkeep
+
+
+
