--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ scipy
 torch
 torchvision
 tensorflow
+pandas
 facenet-pytorch      # ArcFace / InceptionResnetV1 + MTCNN
 keras-facenet        # FaceNet embeddings (HDIC pipeline)
 
